# means

./: .gitignore  README.md  _entry.py  means.spec  pyproject.toml
.github/workflows/: release.yml
src/means/: __init__.py  __main__.py  api.py  app.py  models.py
tests/: test_api.py  test_models.py
