[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "means"
version = "0.1.0"
description = "A terminal dictionary: shows the meaning of a word and an example."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "textual>=0.50",
    "httpx>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
means = "means.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
